public class AircraftWings
{
    private int numberOfFlaps;
    private int numberOfSlats;
}