public class FanBlades
{
    private int size;
}