public class Motor
{
    private int power;
    private int torque;

    public void startEngine()
    {
        System.out.println("starting");
    }
    public void stopEngine()
    {
        System.out.println("stoping");
    }
}